--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,9 @@
 @import "./header.scss";
 @import "./footer.scss";
+@import "./productSummary.scss";
+@import "./banner.scss";
+@import "./category.scss";
+@import "./product.scss";
 html {
     line-height: 1.15;
     text-size-adjust: 100%;
