complete screen home pc (not lazy load)

--- a/src/assets/scss/banner.scss
+++ b/src/assets/scss/banner.scss
@@ -18,3 +18,20 @@
       }
     }
 }
+.home-banner--top {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    height: 150px;
+    width: 100%;
+    margin-top: 16px;
+    margin-bottom: 15px;
+
+    a {
+        width: 295px;
+        height: 150px;
+        background-color: rgb(232, 232, 232);
+        border-radius: 20px;
+        overflow: hidden;
+    }
+}
