--- a/src/assets/scss/product.scss
+++ b/src/assets/scss/product.scss
@@ -50,6 +50,7 @@
           img {
             transition: all 0.4s ease 0s;
             border-radius: 4px;
+            width: 48px;
           }
   
           &-text {
