--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,7 @@
 @import "./category.scss";
 @import "./product.scss";
 @import "./home.scss";
+@import "./menuMobile.scss";
 html {
     line-height: 1.15;
     text-size-adjust: 100%;
