--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -145,6 +145,11 @@
         }
       }
     }
+    @media (max-width: 1190px) { 
+        &--cart {
+            display: none; 
+        }
+    }
 }
 .home-top-brand {
     display: flex;
@@ -168,20 +173,41 @@
         width: 800px;
         object-fit: cover;
     }
+
+    @media (max-width: 1190px) {
+        margin-top: 8px;
+        height: calc(30.2222vw);
+        padding: 0px 12px 12px;
+        position: relative;
+
+        div {
+            width: 100vw;
+            position: absolute;
+            bottom: 0px;
+            height: calc(8.53333vw);
+            background: #fff;
+            left: 0px;
+            z-index: -1;
+            border-radius: 12px 12px 0px 0px;
+        }
+        img {
+            width: calc(27.7333vw);
+            object-fit: contain;
+            border-radius: 8px;
+        }
+        .center-brand img {
+            width: calc(36.2667vw);
+            height: calc(30.2222vw);
+        }
+    }
 }
 .my-2 {
     margin-top: 15px;
     margin-bottom: 15px;
 }
 .deal-hot {
+
     width: 100%;
-    justify-content: space-between;
-
-    position: relative;
-    display: flex;
-    height: 274px;
-    overflow: hidden;
-
     &--left {
         width: 736px;
         height: 274px;
@@ -254,53 +280,21 @@
     &--right {
         position: relative;
         display: flex;
-        width: 488px;
-        height: 274px;
         background-color: rgb(38, 27, 94);
         border-radius: 4px;
         overflow: hidden;
         flex-direction: column;
+        width: 100%;
+        
 
         .swiper {
             width: 100%;
             height: 100%;
         }
 
-        .slick-slide {
-            height: 271px;
-            width: 488px;
-        }
 
-        .video {
-            position: relative;
-            width: 100%;
-            height: 100%;
-
-            video {
-                width: 100%;
-                height: 100%;
-            }
-            .pause {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: 80px;
-                height: 80px;
-                background-color: rgba(39, 39, 42, 0.7);
-                border-radius: 50%;
-
-                img {
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
-            }
-        }
         img {
-            width: 488px !important;
-            height: 274px;
+            width: 100%;
             object-fit: cover;
         }
         .swiper-pagination {
@@ -317,6 +311,71 @@
             }
             span.swiper-pagination-bullet-active {
                 background-color: rgb(171, 155, 250) !important;
+            }
+        }
+    }
+
+    @media (min-width: 1200px) {
+        justify-content: space-between;
+        position: relative;
+        display: flex;
+        height: 274px;
+        overflow: hidden;
+        padding: 0px;
+
+        &--right {
+            width: 488px;
+            height: 274px;
+
+            .slick-slide {
+                height: 271px;
+                width: 488px;
+            }
+
+            .video {
+                position: relative;
+                width: 100%;
+                height: 100%;
+    
+                video {
+                    width: 100%;
+                    height: 100%;
+                }
+                .pause {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    width: 80px;
+                    height: 80px;
+                    background-color: rgba(39, 39, 42, 0.7);
+                    border-radius: 50%;
+    
+                    img {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+            }
+            img {
+                width: 488px !important;
+                height: 274px;
+                object-fit: cover;
+            }
+        }
+    }
+    @media (max-width: 1190px) {
+        margin: 12px auto;
+        width: calc(100vw - 24px);
+        height: calc(((100vw - 24px) * 74) / 131.5);
+
+        &--right {
+            height: 100%;
+
+            img {
+                height: 100%;
             }
         }
     }
