--- a/src/assets/scss/menuMobile.scss
+++ b/src/assets/scss/menuMobile.scss
@@ -9,7 +9,7 @@
     border-top: 1px solid rgb(241, 241, 241);
     width: 100%;
 
-    a {
+    div {
         width: 64px;
         display: flex;
         -webkit-box-pack: center;
@@ -24,6 +24,7 @@
         text-decoration: none;
         position: relative;
         z-index: 1;
+        font-size: 18px;
 
         img {
             width: 20px;
@@ -34,9 +35,9 @@
         }
     }
 
-    a.active {
+    .active {
         span{
-            color: rgb(13, 92, 182);
+            color: rgb(13, 92, 182) !important;
         }
     }
 }
