login and search popup

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,8 @@
 @import "./product.scss";
 @import "./home.scss";
 @import "./menuMobile.scss";
+@import "./box-search.scss";
+@import "./login.scss";
 html {
     line-height: 1.15;
     text-size-adjust: 100%;
