--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,13 +1,13 @@
-@import "./header.scss";
-@import "./footer.scss";
-@import "./productSummary.scss";
-@import "./banner.scss";
-@import "./category.scss";
-@import "./product.scss";
-@import "./home.scss";
-@import "./menuMobile.scss";
-@import "./box-search.scss";
-@import "./login.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
+@import "./products/productSummary.scss";
+@import "./pages/home/banner.scss";
+@import "./pages/home/category.scss";
+@import "./pages/home/product.scss";
+@import "./pages/home/home.scss";
+@import "./layout/menuMobile.scss";
+@import "./common/box-search.scss";
+@import "./login/login.scss";
 html {
     line-height: 1.15;
     text-size-adjust: 100%;
