--- a/src/assets/scss/pages/category/sidebar.scss
+++ b/src/assets/scss/pages/category/sidebar.scss
@@ -4,6 +4,7 @@
     border-radius: 4px 0px 0px 4px;
     overflow: hidden;
 
+
     h4 {
         margin: 10px 0px 15px 15px;
         line-height: 20px;
@@ -251,5 +252,8 @@
         flex-direction: column;
         //padding: 0px 16px 12px;
         border-top: 1px solid rgb(247, 247, 247);
+    }
+    @media (max-width: 1100px) {
+       display: none;
     }
 }
