--- a/src/assets/scss/pages/home/product.scss
+++ b/src/assets/scss/pages/home/product.scss
@@ -150,6 +150,7 @@
                 }
             }
           }
+
         &__product {
             // display: flex;
             // flex-direction: column;
@@ -182,6 +183,18 @@
                   border-top: 1px solid rgb(242, 242, 242);
                   border-right: 1px solid rgb(242, 242, 242);
                 }
+              }
+              .view-more {
+                display: inline-block;
+                width: 100px;
+                padding: 8px 12px;
+                border-radius: 4px;
+                border: 1px solid rgb(13, 92, 182);
+                color: rgb(13, 92, 182);
+                font-size: 13px;
+                text-align: center;
+                margin-top: 12px;
+                font-weight: 500;
               }
         }
     }
