--- a/src/assets/scss/pages/productdetail/comment.scss
+++ b/src/assets/scss/pages/productdetail/comment.scss
@@ -7,6 +7,11 @@
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
 
+    @media (max-width: 1024px) {
+        flex-direction: column;
+        width: 100%;  
+    }
+
     .cmt-heading {
         font-size: 20px;
         line-height: 32px;
@@ -348,6 +353,12 @@
             display: flex;
             margin: 0px;
             list-style: none;
+
+            @media (max-width: 1024px) {
+                display: flex;
+                width: 80%; 
+                justify-content: center;
+            }
 
             li {
                 margin-left: 8px;
