--- a/src/assets/scss/pages/productdetail/productdescribe.scss
+++ b/src/assets/scss/pages/productdetail/productdescribe.scss
@@ -5,10 +5,15 @@
         flex: 1 1 0%;
 
         .left-group {
+            
             width: calc(100% - 300px);
             margin-bottom: 16px;
             border-radius: 4px;
             background-color: rgb(255, 255, 255);
+
+            @media (max-width: 1024px) {
+                width: 80%; 
+            }
 
             h2 {
                 color: rgb(51, 51, 51);
@@ -32,6 +37,13 @@
                 color: rgb(36, 36, 36);
                 text-align: justify;
                 border-radius: 4px;
+
+                @media (max-width: 1024px) {
+                    flex-direction: column;
+                    width: 80%; 
+                    position: relative;
+                    margin-left: 4px;
+                }
             }
         }
 
