--- a/src/assets/scss/products/viewed.scss
+++ b/src/assets/scss/products/viewed.scss
@@ -4,6 +4,7 @@
     padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 15px;
     background-color: white;
 
     h2 {
