--- a/src/assets/scss/components/layout/header.scss
+++ b/src/assets/scss/components/layout/header.scss
@@ -54,6 +54,7 @@
         align-items: center;
         -webkit-box-pack: center;
         justify-content: center;
+        font-family: Roboto ,Helvetica,Arial,sans-serif;
   
         img {
           width: 20px;
