--- a/src/assets/scss/pages/home/home.scss
+++ b/src/assets/scss/pages/home/home.scss
@@ -1,4 +1,4 @@
-@import "include/home_backup.scss";
-@import "include/banner.scss";
-@import "include/product.scss";
-@import "include/homecategory.scss";
+@import "./include/banner.scss";
+@import "./include/home_backup.scss";
+@import "./include/homecategory.scss";
+@import "./include/product.scss";
