--- a/src/assets/scss/components/layout/menuMobile.scss
+++ b/src/assets/scss/components/layout/menuMobile.scss
@@ -9,6 +9,11 @@
     border-top: 1px solid rgb(241, 241, 241);
     width: 100%;
 
+    @media (max-width: 1024px) {
+        width: 100%;
+        position: relative;
+    }
+
     div {
         width: 64px;
         display: flex;
