--- a/src/assets/scss/pages/productdetail/include/productdescribe.scss
+++ b/src/assets/scss/pages/productdetail/include/productdescribe.scss
@@ -12,7 +12,9 @@
             background-color: rgb(255, 255, 255);
 
             @media (max-width: 1024px) {
-                width: 80%; 
+                width: 100%; 
+                padding-left: 2px;
+                padding-right: 2px;
             }
 
             h2 {
@@ -40,7 +42,7 @@
 
                 @media (max-width: 1024px) {
                     flex-direction: column;
-                    width: 80%; 
+                    width: 100%; 
                     position: relative;
                     margin-left: 4px;
                 }
@@ -51,6 +53,10 @@
             width: 300px;
             margin-left: 20px;
             padding-top: 30px;
+
+            @media (max-width: 1024px) {
+                display: none;
+            }
         }
     }
 }
