--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -1,3 +1,7 @@
+@import "./include/comment.scss";
+@import "./include/productdescribe.scss";
+@import "./include/similarproduct.scss";
+
 .product-detail {
     display: flex;
     margin-bottom: 16px;
@@ -8,8 +12,9 @@
         flex-direction: column;
         width: 100%; 
         position: relative;
-        margin-left: 4px;
+        margin-left: 1px;
         margin-right: 1px;
+        padding-left: 15px;
     }
 }
 
@@ -28,21 +33,30 @@
         display: flex;
         width: 444px;
         height: 444px;
+        cursor: pointer;
     }
 }
 
-.review-img {
-    flex: 0 0 100%;
-    margin: 16px 0px 0px;
-    img {
-        cursor: pointer;
-        position: relative;
-        width: 64px;
-        height: 64px;
-        margin-right: 12px;
-        border-radius: 4px;
-        overflow: hidden;
-    }
+// .review-img {
+//     flex: 0 0 100%;
+//     margin: 16px 0px 0px;
+//     img {
+//         cursor: pointer;
+//         position: relative;
+//         width: 64px;
+//         height: 64px;
+//         margin-right: 12px;
+//         border-radius: 4px;
+//         overflow: hidden;
+//     }
+// }
+
+.review-swiper {
+    margin-top: 5px;
+    width: 444px;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .share-product {
@@ -84,6 +98,14 @@
                 display: flex;
                 -webkit-box-align: baseline;
                 align-items: baseline;
+
+                @media (max-width: 1024px) {
+                    font-size: 18px;
+                    font-weight: 300; 
+                    color: rgb(36, 36, 36);  
+                    text-align: center; 
+                    margin-left: 15px;
+                }
             }
 
             h6 {
@@ -93,6 +115,7 @@
                 font-weight: 400;
                 line-height: 20px;
             }
+            
         }
 
         .product-title {
@@ -102,6 +125,14 @@
             font-weight: 300;
             line-height: 32px;
             word-break: break-word;
+            
+        @media (max-width: 1024px) {
+            font-size: 20px;
+            font-weight: 300; 
+            color: rgb(36, 36, 36);  
+            text-align: center; 
+        }
+
         }
 
         .below-title {
@@ -114,6 +145,11 @@
 
             .below-rate {
                 display: flex;
+
+                .star-on {
+                    color: rgb(253, 216, 53);
+                    display: inline-block;
+                }
             }
 
             a {
@@ -161,7 +197,7 @@
                 flex-direction: column;
                 border-radius: 4px;
                 background-color: rgb(250, 250, 250);
-                padding: 0px 16px 12px
+                padding: 0px 16px 12px;
             }
 
             .price- {
@@ -495,7 +531,7 @@
                 flex-direction: column;
                 width: 100%; 
                 position: relative;
-                justify-content: center;
+                display: flex;
             }
 
             .seller-info {
@@ -693,9 +729,9 @@
                 }
             }
             @media (max-width: 1024px) {
-                display: flex;
-                width: 50% !important; 
+                display: flex; 
                 position: relative;
+                margin-bottom: 10px;
             }
         }
     }    
