--- a/src/assets/scss/products/viewed.scss
+++ b/src/assets/scss/products/viewed.scss
@@ -7,6 +7,12 @@
     margin-top: 15px;
     background-color: white;
 
+    @media (max-width: 1024px) {
+        width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
     h2 {
         color: rgb(51, 51, 51);
         font-size: 20px;
