--- a/src/assets/scss/pages/category/include/sidebar.scss
+++ b/src/assets/scss/pages/category/include/sidebar.scss
@@ -24,7 +24,11 @@
         font-size: 14px;
         //padding: 0px;
         font-weight: 2000;
-        }
+        }    
+    }
+
+    ul {
+        padding: 0 0 0 15px;
     }
 
     ul li {
