--- a/src/assets/scss/components/layout/menuMobile.scss
+++ b/src/assets/scss/components/layout/menuMobile.scss
@@ -4,14 +4,14 @@
     justify-content: space-between;
     position: fixed;
     bottom: 0px;
-    background: white;
+    background: white; 
     z-index: 200;
     border-top: 1px solid rgb(241, 241, 241);
     width: 100%;
-
+    
     @media (max-width: 1024px) {
         width: 100%;
-        position: relative;
+        position: fixed;
     }
 
     div {
