--- a/src/assets/scss/pages/category/category.scss
+++ b/src/assets/scss/pages/category/category.scss
@@ -1,5 +1,6 @@
 @import "./include/categoryright.scss";
 @import "./include/sidebar.scss";
+@import "./include/mobile/m_cateheader.scss";
 
 .container {
     width: 1270px;
@@ -8,11 +9,12 @@
     margin-right: auto;
     margin-left: auto;
 
-    @media (max-width: 1100px) {
+    @media (max-width: 1024px) {
         padding-left: 0px;
         padding-right: 0px;
         margin-right: auto;
         margin-left: auto;
+        width: 100%;
     }
 }
 
@@ -22,6 +24,10 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 1240px;
+
+    @media (max-width: 1024px) {
+        width: 100%;
+    }
 }
 
 .category-title {
@@ -32,8 +38,7 @@
     margin-left: auto;
 
     @media (max-width: 1024px) {
-        width: 100%;
-        position: relative;
+        display: none;
     }
 
     a {
