--- a/src/assets/scss/pages/category/include/categoryright.scss
+++ b/src/assets/scss/pages/category/include/categoryright.scss
@@ -2,7 +2,11 @@
     width: calc(100% - 208px);
     border-radius: 0px 4px 4px 0px;
     position: relative;  
-    background-color: #efefef;;
+    background-color: #efefef;
+            
+    @media (max-width: 1024px) {
+        width: 100%;
+    }
 
     .title {
         padding: 0.3px 0px 0.3px 16px;
@@ -10,19 +14,27 @@
         font-size: 10px;
     }
 
-    .adv-swiper {
+    .adv-slide {
+        background-color: white;
         margin: 0px auto;
         position: relative;
         overflow: hidden;
-        background-color: white;
-    }
-
-    .adv-slide {
-        background-color: white;
+        
         img {
-            width: 861px;
+            width: 100%;
             height: 286px;
             object-fit: cover;
+            padding: 10px;
+
+            @media (max-width: 1024px) {
+                width: 100%;
+                height: 70%;
+                padding: 12px 12px 0px;
+            }
+        }
+
+        @media (max-width: 1024px) {
+            padding: 5px;
         }
     }
 
@@ -34,11 +46,6 @@
         padding: 12px 0px 0px;
         background-color: white;
 
-        
-    @media (max-width: 1024px) {
-        padding-left: 5px;
-        padding-right: 5px;
-        width: 100%;
     }
 
         .top-tabs {
@@ -50,6 +57,11 @@
             list-style: none;
             padding: 0px;
             margin: 0px;
+
+            @media (max-width: 1024px) {
+                width: 100%;
+                display: inline-block;
+            }
 
             a {
                 text-transform: capitalize;
@@ -63,6 +75,10 @@
                 display: inline-block;
                 font-size: 14px;
                 padding: 12px 16px;
+
+                @media (max-width: 1024px) {
+                    padding: 6px 6px;
+                }
             }
             
             a:hover {
@@ -90,6 +106,10 @@
         margin: 4px 16px 8px 0px;
         -webkit-box-align: center;
         align-items: center;
+
+        @media (max-width: 1024px) {
+            display: none;
+        }
         
         .paging {
             display: flex;
@@ -113,7 +133,7 @@
             }
         }
     }
-    }
+
 
     .summary-bottom  {
         padding: 12px 0px 12px 16px;
@@ -150,10 +170,9 @@
     .product-container {
 
         @media (max-width: 1024px) {
-            padding-left: 1px;
-            padding-right: 5px;
             width: 100%;
             position: relative;
+            padding-top: 5px;
         }
 
         .product-list {
@@ -177,6 +196,10 @@
 
     .paging-nav {
         text-align: center;
+
+        @media (max-width: 1024px) {
+            display: none;
+        }
 
         ul {
             padding: 0px;
