--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -137,18 +137,17 @@
             font-weight: 500;
         }
 
-        .img-inner {
+        .imgs-inner {
             display: flex;
 
             img {
                 background-size: cover;
                 border-radius: 4px;
-                height: 100%;
-                width: 100%;
+                height: 120px;
+                width: 120px;
                 background-position: center center;
                 margin: 0px 16px 0px 0px;
                 cursor: pointer;
-                
             }
         }
     }
