--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -1,6 +1,7 @@
 @import "./include/comment.scss";
 @import "./include/productdescribe.scss";
 @import "./include/similarproduct.scss";
+@import "./include//mobile/m_detail_header.scss";
 
 .product-detail {
     display: flex;
@@ -12,9 +13,6 @@
         flex-direction: column;
         width: 100%; 
         position: relative;
-        margin-left: 1px;
-        margin-right: 1px;
-        padding-left: 15px;
     }
 }
 
@@ -37,19 +35,19 @@
     }
 }
 
-// .review-img {
-//     flex: 0 0 100%;
-//     margin: 16px 0px 0px;
-//     img {
-//         cursor: pointer;
-//         position: relative;
-//         width: 64px;
-//         height: 64px;
-//         margin-right: 12px;
-//         border-radius: 4px;
-//         overflow: hidden;
-//     }
-// }
+.review-img1 {
+    flex: 0 0 100%;
+    margin: 16px 0px 0px;
+    img {
+        cursor: pointer;
+        position: relative;
+        width: 90%;
+        height: 90%;
+        margin-right: 12px;
+        border-radius: 4px;
+        overflow: hidden;
+    }
+}
 
 .review-swiper {
     margin-top: 5px;
@@ -57,6 +55,10 @@
     display: flex;
     overflow: hidden;
     cursor: pointer;
+
+    .swiper-button-prev, .swiper-button-next {
+        display: none;
+    }
 }
 
 .share-product {
@@ -127,10 +129,18 @@
             word-break: break-word;
             
         @media (max-width: 1024px) {
-            font-size: 20px;
-            font-weight: 300; 
-            color: rgb(36, 36, 36);  
-            text-align: center; 
+            font-size: 16px;
+            line-height: 24px;
+            overflow: hidden;
+            display: -webkit-box;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            font-weight: 400;
+            margin-bottom: 4px;
+            margin-top: 0px;
+            word-break: break-word;
+            padding: 0px 16px 12px;
         }
 
         }
@@ -142,6 +152,10 @@
             margin-top: 4px;
             -webkit-box-pack: justify;
             justify-content: space-between;
+
+            @media (max-width: 1024px) {
+                padding: 0px 16px 12px;
+            }
 
             .below-rate {
                 display: flex;
@@ -287,6 +301,10 @@
                 border-top: 1px solid rgb(242, 242, 242);
                 padding-top: 16px;
 
+                @media (max-width: 1024px) {
+                    padding: 0px 16px 12px;
+                }
+
                 .coupon-text {
                     font-size: 15px;
                     font-weight: 500;
@@ -325,6 +343,10 @@
                 background-color: rgb(255, 255, 255);
                 margin: 16px 0px 0px;
                 border-top: 1px solid rgb(242, 242, 242);
+                
+                @media (max-width: 1024px) {
+                    padding: 0px 16px 12px;
+                }
                 
                 .change-addr {
                     display: flex;
