--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -195,6 +195,7 @@
                 text-align: center;
                 margin-top: 12px;
                 font-weight: 500;
+                margin-bottom: 40px;
               }
         }
     }
