--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -371,7 +371,7 @@
 
             @media (max-width: 1024px) {
                 display: flex;
-                width: 80%; 
+                align-items: center;
                 justify-content: center;
             }
 
