--- a/src/assets/scss/pages/category/include/categoryright.scss
+++ b/src/assets/scss/pages/category/include/categoryright.scss
@@ -60,7 +60,7 @@
 
             @media (max-width: 1024px) {
                 width: 100%;
-                display: inline-block;
+                display: flex;  
             }
 
             a {
@@ -77,7 +77,7 @@
                 padding: 12px 16px;
 
                 @media (max-width: 1024px) {
-                    padding: 6px 6px;
+                    justify-content: space-between;
                 }
             }
             
