--- a/src/assets/scss/pages/account/include/account_info.scss
+++ b/src/assets/scss/pages/account/include/account_info.scss
@@ -87,48 +87,148 @@
                             justify-content: space-between;
                             flex-direction: column;
                         }
-
-                        .form-control {
-                            display: flex;
-                            -webkit-box-align: center;
-                            align-items: center;
-                            margin: 0px 0px 34px;
-                            
-                            label {
-                                width: 110px;
-                                min-width: 110px;
-                                font-size: 14px;
-                                color: rgb(51, 51, 51);
-                                margin-right: 16px;
-                            }
-
-
-                        }
-
-                        .input-label {
-                            display: flex;
-                            flex: 1 1 0%;
-                            position: relative;
-                            z-index: 1;
-                            width:100%;
-                        }
-                            
-                        .input {
-                            transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s, -webkit-box-shadow 0.15s ease-in-out 0s;
-                            height: 36px;
-                            width: 100%;
-                            border-radius: 4px;
-                            padding: 10px 12px;
-                            line-height: 20px;
-                            outline: none;
-                            // flex: 1 1 0%;
-                            border: 1px solid rgb(196, 196, 207);           
-                        }
                         
                     }
                 }
             }
             
+            .form-control {
+                display: flex;
+                -webkit-box-align: center;
+                align-items: center;
+                margin: 0px 0px 34px;
+                
+                label {
+                    width: 110px;
+                    min-width: 110px;
+                    font-size: 14px;
+                    color: rgb(51, 51, 51);
+                    margin-right: 16px;
+                }
+                
+                .form-select {
+                    display: flex;
+                    flex: 1 1 0%;
+                    position: relative;
+                    z-index: 1;
+
+                    select {
+                        width: 100px;
+                        border: 1px solid rgb(204, 204, 204);
+                        height: 34px;
+                        padding: 6px 12px;
+                        line-height: 34px;
+                        outline: none;
+                        border-radius: 4px;
+                        margin: 0px 12px 0px 0px;
+                        background: 0px center;
+                        box-shadow: none;
+                    }
+                }     
+
+                button {
+                    border: 0px;
+                    width: 176px;
+                    height: 40px;
+                    border-radius: 4px;
+                    color: rgb(255, 255, 255);
+                    font-size: 14px;
+                    background-color: rgb(11, 116, 229);
+                    cursor: pointer;
+                }
+
+            }
+
+            .input-label {
+                display: flex;
+                flex: 1 1 0%;
+                position: relative;
+                z-index: 1;
+                width:100%;
+            }
+            
+            .input-label1 {
+                width: 110px;
+                min-width: 110px;
+                font-size: 14px;
+                color: rgb(51, 51, 51);
+                margin-right: 16px;
+            }
+
+            .input {
+                transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s, -webkit-box-shadow 0.15s ease-in-out 0s;
+                height: 36px;
+                width: 100%;
+                border-radius: 4px;
+                padding: 10px 12px;
+                line-height: 20px;
+                outline: none;
+                // flex: 1 1 0%;
+                border: 1px solid rgb(196, 196, 207);           
+            }
+
+            .check-label {
+                display: flex;
+                margin-right: 15px;
+                cursor: pointer;
+                
+                .check-input {
+                    width: 18px;
+                    height: 18px;
+                    border: 1px solid rgb(147, 150, 157);
+                    border-radius: 50%;
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin: 0px 10px 0px 0px;
+                    position: relative;
+                    z-index: 1;
+                    color: rgb(120, 120, 120);
+                    flex-shrink: 0;
+                }
+
+                span {
+                    font-size: 13px;
+                    line-height: 20px;
+                    display: flex;
+                    -webkit-box-align: center;
+                    align-items: center;
+                }
+            }
+
+            .input-region {
+
+                display: flex;
+                flex: 1 1 0%;
+                position: relative;
+                z-index: 1;
+                width: 100%;
+
+                .input-with-icon-right {
+                    padding-right: 35px;
+                }
+
+                input {
+                    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s, -webkit-box-shadow 0.15s ease-in-out 0s;
+                    height: 36px;
+                    width: 100%;
+                    border-radius: 4px;
+                    padding: 10px 12px;
+                    line-height: 20px;
+                    outline: none;
+                    flex: 1 1 0%;
+                    border: 1px solid rgb(196, 196, 207);
+                }
+
+                svg {
+                    position: absolute;
+                    right: 10px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    width: 24px;
+                }
+    
+            }
+
             .info-vertical {
                 border-left: 1px solid rgb(235, 235, 240);
                 margin: 16px 0px;
@@ -139,6 +239,70 @@
                 padding: 16px 16px 16px 24px;
                 display: flex;
                 flex-direction: column;
+
+                .info-title {
+                    font-size: 16px;
+                    line-height: 24px;
+                    font-weight: 400;
+                    color: rgb(100, 100, 109);
+                }
+                
+                .list-container {
+                    font-size: 16px;
+                    line-height: 24px;
+                    font-weight: 400;
+                    color: rgb(100, 100, 109);
+
+                    .listitem {
+                        border-top: 1px solid rgb(248, 248, 248);
+                        display: flex;
+                        -webkit-box-align: center;
+                        align-items: center;
+                        width: 100%;
+                        -webkit-box-pack: justify;
+                        justify-content: space-between;
+                        padding: 19px 0px;
+                    }
+
+                    .listitem-info {
+                        display: flex;
+                        flex-wrap: nowrap;
+                        -webkit-box-pack: justify;
+                        justify-content: space-between;
+                        background-color: rgb(255, 255, 255);
+                        border-radius: 8px;
+                        .listitem-info-detail {
+                            display: flex;
+                            flex-direction: column;
+
+                            span {
+                                font-size: 14px;
+                                line-height: 20px;
+                                margin: 0px 0px 0px 6px;
+                                color: rgb(56, 56, 61);
+                            }
+                        }
+                    }
+
+                    .listitem-status {
+                        color: rgb(27, 168, 255);
+                        flex: 1 1 0%;
+                        -webkit-box-pack: justify;
+                        justify-content: space-between;
+                        display: flex;
+
+                        button {
+                            border: 1px solid rgb(11, 116, 229);
+                            background-color: rgb(255, 255, 255);
+                            height: 28px;
+                            border-radius: 4px;
+                            font-size: 14px;
+                            cursor: pointer;
+                            padding: 0px 12px;
+                            color: rgb(11, 116, 229);
+                        }
+                    }
+                }
             }
         }
     }
