update-account-page3

--- a/src/assets/scss/pages/account/account.scss
+++ b/src/assets/scss/pages/account/account.scss
@@ -1,5 +1,7 @@
 @import './include/sidebar.scss';
 @import './include/account_info.scss';
+@import './include/ordermanagement.scss';
+@import './include/orderdetail.scss';
 
 .page-container {
     display: flex;
