--- a/src/assets/scss/pages/account/account.scss
+++ b/src/assets/scss/pages/account/account.scss
@@ -2,7 +2,9 @@
 @import './include/account_info.scss';
 @import './include/ordermanagement.scss';
 @import './include/orderdetail.scss';
-
+@import './include/updatepassword.scss';
+@import './include/updatephonenum.scss';
+@import './include/updatepin.scss';
 .page-container {
     display: flex;
     width: 100%;
