--- a/src/assets/scss/components/login/login.scss
+++ b/src/assets/scss/components/login/login.scss
@@ -66,3 +66,216 @@
         }
     }
 }
+
+.login-desktop {
+    position: fixed;
+    inset: 0px;
+    background: rgba(0, 0, 0, 0.53);
+    overflow-y: scroll;
+    z-index: 1000;
+
+    .login-desktop-container {
+        position: relative;
+        inset: 0px;
+        border: none;
+        background: rgb(255, 255, 255);
+        overflow: unset;
+        border-radius: 20px;
+        outline: none;
+        padding: 0px;
+        width: 800px;
+        margin: 80px auto;
+
+        .login-desktop-content {
+            background: rgb(248, 248, 248);
+            display: flex;
+            width: 100%;
+            border-radius: 20px;
+            position: relative;
+
+            .button-close {
+                position: absolute;
+                right: -8px;
+                top: -8px;
+                width: 42px;
+                height: 42px;
+                background: none;
+                border: none;
+                cursor: pointer;
+                
+                img {
+                    position: absolute;
+                    right: -8px;
+                    top: -8px;
+                    width: 42px;
+                    height: 42px;
+                    background: none;
+                    border: none;
+                    cursor: pointer;
+                }
+            }
+            
+
+
+            .login-left {
+                width: 500px;
+                padding: 40px 45px 24px;
+                background: rgb(255, 255, 255);
+                border-radius: 20px 0px 0px 20px;
+
+                .login-left-content-heading {
+                    margin-bottom: 20px;
+
+                    h4 {
+                        margin: 0px 0px 10px;
+                        font-size: 24px;
+                        font-weight: 500;
+                    }
+
+                    p {
+                        margin: 0px;
+                        font-size: 15px;
+                    }
+                }
+
+                .left-content-heading-input {
+                    position: relative;
+                    z-index: 1;
+                    
+                    input::before {
+                        content: "";
+                        position: absolute;
+                        left: 0px;
+                        right: 0px;
+                        bottom: 0px;
+                        border-bottom: 1px solid rgb(224, 224, 224);
+                    }
+
+                    input {
+                        width: 100%;
+                        padding: 10px 0px;
+                        border: none;
+                        font-size: 24px;
+                        color: rgb(36, 36, 36);
+                        outline: none;
+                        position: relative;
+                    }
+                }
+
+                button {
+                    margin: 30px 0px 10px;
+                    outline: none;
+                    border-radius: 4px;
+                    background: rgb(255, 66, 78);
+                    padding: 13px 0px;
+                    width: 100%;
+                    color: rgb(255, 255, 255);
+                    border: none;
+                    font-size: 20px;
+                    cursor: pointer;
+                }
+            
+            }
+
+            .login-with-login {
+                margin: 10px 0px 0px;
+                text-align: center;
+                color: rgb(13, 92, 182);
+                cursor: pointer;
+            }
+
+            .login-left-footer {
+                text-align: center;
+                margin: 80px 0px 0px;
+
+                .login-footer-text1 {
+                    margin: 0px 0px 15px;
+                    position: relative;
+
+                    .login-footer-text1::before {
+                        content: "";
+                        width: 100%;
+                        height: 1px;
+                        background: rgb(242, 242, 242);
+                        position: absolute;
+                        left: 0px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        z-index: 1;
+                    }
+
+                    span {
+                        font-size: 15px;
+                        color: rgb(120, 120, 120);
+                        display: inline-block;
+                        background: rgb(255, 255, 255);
+                        padding: 0px 20px;
+                        position: relative;
+                        z-index: 2;
+                    }
+                }
+
+                ul {
+                    display: flex;
+                    flex-direction: row;
+                    padding: 0px;
+                    margin: 0px 0px 10px;
+                    list-style: none;
+                    -webkit-box-align: center;
+                    align-items: center;
+                    -webkit-box-pack: center;
+                    justify-content: center;
+
+                    li {
+                        margin: 0px 10px;
+                    }
+                }
+
+                .note {
+                    font-size: 11px;
+                    color: rgb(120, 120, 120);
+                    text-align: center;
+                    a {
+                        display: inline-block;
+                        text-decoration: underline;
+                        margin-left: 5px;
+                        font-size: 11px;
+                        color: rgb(120, 120, 120);
+                    }
+                }
+            }
+
+            .login-right {
+                background: linear-gradient(136deg, rgb(240, 248, 255) -1%, rgb(219, 238, 255) 85%);
+                width: 300px;
+                -webkit-box-align: center;
+                align-items: center;
+                -webkit-box-pack: center;
+                justify-content: center;
+                display: flex;
+                flex-direction: column;
+                border-radius: 0px 20px 20px 0px;
+
+                .login-right-content {
+                    margin: 30px 0px 0px;
+                    text-align: center;
+
+                    h4 {
+                        margin: 0px 0px 5px;
+                        color: rgb(11, 116, 229);
+                        font-size: 17px;
+                        font-weight: 500;
+                    }
+
+                    span {
+                        font-size: 13px;
+                        color: rgb(11, 116, 229);
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
