--- a/src/assets/scss/pages/account/include/sidebar.scss
+++ b/src/assets/scss/pages/account/include/sidebar.scss
@@ -64,13 +64,26 @@
             ul:hover {
                 background-color: red;
             }
+
+            li {
+                list-style: none;
+                color: rgb(0, 0, 0);
+                display: flex;
+                -webkit-box-align: center;
+                align-items: center;
+                padding: 7px 18px;
+                
+                .li-text {
+                    margin-left: 4px;
+                }
+            }
         }
 
 
-        svg {
-            width: 24px;
-            height: 24px;
-            margin: 0px 22px 0px 0px;
+        .iimg {
+            width: 16px;
+            height: 16px;
+            margin: 0px 22px 0px 4.5px;
             font-size: 24px;
             color: rgb(155, 155, 155);
         }
