--- a/src/assets/scss/pages/account/account.scss
+++ b/src/assets/scss/pages/account/account.scss
@@ -5,6 +5,8 @@
 @import './include/updatepassword.scss';
 @import './include/updatephonenum.scss';
 @import './include/updatepin.scss';
+@import './include/mobile/accountsetting.scss';
+
 .page-container {
     display: flex;
     width: 100%;
