Update code loading

--- a/src/assets/scss/pages/home/home.scss
+++ b/src/assets/scss/pages/home/home.scss
@@ -492,7 +492,7 @@
 
     .category-swiper {
         width: 1240px;
-        margin: 0px auto;
+        margin: 0 auto;
         position: relative;
         height: 44px;
         overflow: hidden;
