--- a/src/assets/scss/pages/category/include/sidebar.scss
+++ b/src/assets/scss/pages/category/include/sidebar.scss
@@ -35,9 +35,8 @@
             list-style: none;
             font-size: 12px;
             font-weight: 400;
-            padding: 0px 0px 12px 0px;
+            padding: 0 15px 0 0;
             line-height: 16px;
-            display: flex;
             -webkit-box-align: center;
             align-items: center;
 
