--- a/src/assets/scss/pages/home/home.scss
+++ b/src/assets/scss/pages/home/home.scss
@@ -499,16 +499,23 @@
 
         .swiper-wrapper {
            text-align: center;
+            .category-item {
+                height: 100%;
+                a {
+                    height: 100%;
+                    display: block;
+                }
+            }
         }
 
         .position-relative {
             position: relative;
-            p {
-                color: rgb(56, 56, 61);
-                font-size: 14px;
-                display: inline-block;
-                white-space: nowrap;
-            }
+            color: rgb(56, 56, 61);
+            font-size: 14px;
+            white-space: nowrap;
+            height: 100%;
+            display: flex;
+            align-items: center;
         }
 
         .swiper-button-disabled {
