--- a/src/assets/scss/pages/account/account.scss
+++ b/src/assets/scss/pages/account/account.scss
@@ -6,6 +6,8 @@
 @import './include/updatephonenum.scss';
 @import './include/updatepin.scss';
 @import './include/mobile/accountsetting.scss';
+@import './include/mobile/update.scss';
+@import './include//mobile//ordmanagement.scss';
 
 .page-container {
     display: flex;
