--- a/src/assets/scss/pages/category/include/sidebar.scss
+++ b/src/assets/scss/pages/category/include/sidebar.scss
@@ -35,19 +35,21 @@
             list-style: none;
             font-size: 12px;
             font-weight: 400;
-            padding: 0px 0px 12px 0px;
+            padding: 0 15px 0 0;
             line-height: 16px;
-            display: flex;
             -webkit-box-align: center;
             align-items: center;
 
             a {
                 color: rgb(56, 56, 61);
+                display: block;
+                padding: 5px 0;
             }
 
             a:hover {
                 background-color: transparent;
                 cursor: pointer;
+                color: #e91e63;
             }
     }
 
