--- a/src/assets/scss/pages/home/home.scss
+++ b/src/assets/scss/pages/home/home.scss
@@ -1,6 +1,7 @@
 @import "./include/banner.scss";
 @import "./include/homecategory.scss";
 @import "./include/product.scss";
+@import '../../products/productSummary.scss';
 
 .famous-brand {
     background-color: rgb(255, 255, 255);
