--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./pages/productdetail/product.scss";
 @import "./pages/account/account.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');
+@import "./components/common/shopcart.scss";
 
 
 html {
