--- a/src/assets/scss/components/login/login.scss
+++ b/src/assets/scss/components/login/login.scss
@@ -71,7 +71,6 @@
     position: fixed;
     inset: 0px;
     background: rgba(0, 0, 0, 0.53);
-    overflow-y: scroll;
     z-index: 1000;
 
     .login-desktop-container {
@@ -84,7 +83,7 @@
         outline: none;
         padding: 0px;
         width: 800px;
-        margin: 80px auto;
+        margin: 30px auto;
 
         .login-desktop-content {
             background: rgb(248, 248, 248);
@@ -190,67 +189,6 @@
                 cursor: pointer;
             }
 
-            .login-left-footer {
-                text-align: center;
-                margin: 40px 0px 0px;
-
-                .login-footer-text1 {
-                    margin: 0px 0px 15px;
-                    position: relative;
-
-                    .login-footer-text1::before {
-                        content: "";
-                        width: 100%;
-                        height: 1px;
-                        background: rgb(242, 242, 242);
-                        position: absolute;
-                        left: 0px;
-                        top: 50%;
-                        transform: translateY(-50%);
-                        z-index: 1;
-                    }
-
-                    span {
-                        font-size: 15px;
-                        color: rgb(120, 120, 120);
-                        display: inline-block;
-                        background: rgb(255, 255, 255);
-                        padding: 0px 20px;
-                        position: relative;
-                        z-index: 2;
-                    }
-                }
-
-                ul {
-                    display: flex;
-                    flex-direction: row;
-                    padding: 0px;
-                    margin: 0px 0px 10px;
-                    list-style: none;
-                    -webkit-box-align: center;
-                    align-items: center;
-                    -webkit-box-pack: center;
-                    justify-content: center;
-
-                    li {
-                        margin: 0px 10px;
-                    }
-                }
-
-                .note {
-                    font-size: 11px;
-                    color: rgb(120, 120, 120);
-                    text-align: center;
-                    a {
-                        display: inline-block;
-                        text-decoration: underline;
-                        margin-left: 5px;
-                        font-size: 11px;
-                        color: rgb(120, 120, 120);
-                    }
-                }
-            }
-
             .login-right {
                 background: linear-gradient(136deg, rgb(240, 248, 255) -1%, rgb(219, 238, 255) 85%);
                 width: 300px;
@@ -263,7 +201,7 @@
                 border-radius: 0px 20px 20px 0px;
 
                 .login-right-content {
-                    margin: 30px 0px 0px;
+                    margin-bottom: 50px;
                     text-align: center;
 
                     h4 {
@@ -277,6 +215,69 @@
                         font-size: 13px;
                         color: rgb(11, 116, 229);
                         font-weight: 500;
+                    }
+                }
+
+                .login-right-footer {
+                    text-align: center;
+                    margin-bottom: 20px;
+    
+                    .login-footer-text1 {
+                        margin: 0px 0px 15px;
+                        position: relative;
+                        
+    
+                        .login-footer-text1::before {
+                            content: "";
+                            width: 100%;
+                            height: 1px;
+                            background: rgb(242, 242, 242);
+                            position: absolute;
+                            left: 0px;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            z-index: 1;
+                        }
+    
+                        span {
+                            font-size: 15px;
+                            color: rgb(11, 116, 229);
+                            display: inline-block;
+                            padding: 0px 20px;
+                            position: relative;
+                            z-index: 2;
+                        }
+                    }
+    
+                    ul {
+                        display: flex;
+                        flex-direction: row;
+                        padding: 0px;
+                        margin: 0px 0px 10px;
+                        list-style: none;
+                        -webkit-box-align: center;
+                        align-items: center;
+                        -webkit-box-pack: center;
+                        justify-content: center;
+    
+                        li {
+                            margin: 0px 10px;
+                        }
+                    }
+    
+                    .note {
+                        font-size: 11px;
+                        color: rgb(11, 116, 229);
+                        text-align: center;
+                        a {
+                            display: inline-block;
+                            text-decoration: underline;
+                            margin-left: 5px;
+                            font-size: 11px;
+                            color: rgb(120, 120, 120);
+                        }
+
+                        
                     }
                 }
             }
