--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -73,7 +73,7 @@ html {
   
   header {
     position: relative;
-    background: rgb(26, 148, 255);
+    background: #e91e63;
     z-index: 999;
   }
   .cm-width {
@@ -85,7 +85,7 @@ html {
   }
   .pfpi {
       display: flex;
-      padding: 16px 0px 10px;
+      padding: 8px 0 10px;
       height: auto;
       position: relative;
       z-index: 2;
