--- a/src/assets/scss/components/layout/header.scss
+++ b/src/assets/scss/components/layout/header.scss
@@ -15,11 +15,11 @@
             display: flex;
             -webkit-box-pack: justify;
             justify-content: space-between;
-            flex: 1 1 0%;
+            flex: 1 1 0;
 
             a {
-                width: 60px;
-                height: 40px;
+                width: 140px;
+                height: 25px;
                 display: block;
             }
         }
@@ -43,7 +43,7 @@
         button {
             border: 0px;
             width: 120px;
-            background: rgb(13, 92, 182);
+            background: #e91e63;
             height: 40px;
             border-radius: 0px 2px 2px 0px;
             color: white;
