--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -343,7 +343,7 @@
 
                             .col5 {
                                 width: 50px;
-                                text-align: right;
+                                text-align: center;
 
                                 span {
                                     display: inline-block;
