--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -179,7 +179,7 @@
 
                             .col1 {
                                 width: 398px;
-                                padding: 0px 15px;
+                                padding: 0px 15px 0px 5.5px;
 
                                 .product-detail {
                                     .product-checkbox {
@@ -268,8 +268,8 @@
                             }
 
                             .col2 {
-                                width: 190px;
-                                padding: 0px 15px;
+                                width: 180px;
+                                padding: 0px 15px 0px 5px;
 
                                 span {
                                     font-weight: 500;
@@ -281,7 +281,7 @@
                             }
 
                             .col3 {
-                                width: 130px;
+                                width: 140px;
                                 padding: 0px 15px;
                                 padding-left: 0px;
 
@@ -331,7 +331,7 @@
 
                             .col4 {
                                 width: 120px;
-                                padding: 0px 15px;
+                                padding: 0px 15px 0px 10px;
 
                                 span {
                                     color: rgb(255, 66, 78);
