--- a/src/assets/scss/pages/productdetail/include/productdescribe.scss
+++ b/src/assets/scss/pages/productdetail/include/productdescribe.scss
@@ -46,6 +46,23 @@
                     position: relative;
                     margin-left: 4px;
                 }
+
+                button {
+                    cursor: pointer;
+                    padding: 6px 11px;
+                    border-radius: 4px;
+                    border: 1px solid rgb(13, 92, 182);
+                    color: rgb(13, 92, 182);
+                    font-size: 13px;
+                    margin-left: 410px;
+                }
+                button:hover {
+                    cursor: pointer;
+                    border-radius: 4px;
+                    border: 1px solid rgb(13, 92, 182);
+                    color: #fff;
+                    background-color: rgb(13, 92, 182);
+                }
             }
         }
 
